--- a/site/assets/css/style.css
+++ b/site/assets/css/style.css
@@ -15,12 +15,6 @@ body{
 	color: black;	
 }
 
-#wrap{
-	width: 100%;
-	height: 100%;
-	min-width: 1000px;
-}
-
 #head{
 height:156px;
 position:fixed;
